--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,7 +80,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="clearfix">
-                <a href="{{ site.baseurl }}" class="f_left logo"><img src="{{ site.baseurl }}/assets/images/logo.png" height-"100" alt=""></a>
+                <a href="{{ site.url }}" class="f_left logo"><img src="{{ site.baseurl }}/assets/images/logo.png" height-"100" alt=""></a>
                 <a href="#" class="f_right"><img src="{{ site.baseurl }}/assets/images/header_ph.jpg" alt=""></a>
               </div>
             </div>
