--- a/_includes/tags_list.html
+++ b/_includes/tags_list.html
@@ -3,8 +3,8 @@
 {% if include.tags.size > 0 %}
 
         {% for tag in tags %}
-          <a href="{{site.baseurl}}/tags#{{tag}}" class="button banner_button travel"> {{ tag }}</a>
-        {% endfor %}      
+          <a href="{{site.baseurl}}/tags#{{tag}}" class="button banner_button {{ tag }}"> {{ tag }}</a>
+        {% endfor %}
 
   {% endif %}
   </div>
