--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+{{ site.theme_settings.header_text }}
 <div class="col-lg-8 col-md-8 col-sm-12">
     <div class="section text_post_block">
       <h2 class="section_title section_title_big">  {{ page.title }}</h2>
