--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,14 @@
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a870e511d81c2e3"></script>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,500,700">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic">
-  <title>{{ site.title }}</title>
+  <title>{{ site.theme_settings.title }}</title>
   <meta name = "format-detection" content = "telephone=no" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!--meta info-->
-  <meta name="author" content="">
+  <meta name="author" content="Rafael Maia">
   <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="description" content="{{ site.theme_settings.description }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}assets/images/fav_icon.ico">
 
   <!-- RSS -->
@@ -122,7 +122,7 @@
     <div class="breadcrumb">
       <div class="container">
         <div>
-          <span><a href="#">Inicio</a></span> / {{ page.title }}
+          <span><a href="{{ site.url }}">Inicio</a></span> / {{ page.title }}
         </div>
       </div>
     </div>
