--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,17 @@
     </div>
   </div>
   <div class="section t_align_c">
-    <a href="#" class="m_top_50 d_block"><img src="/assets/images/336x280.jpg" alt=""></a>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- sidebar banner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-0673345823124253"
+     data-ad-slot="1008748357"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    <!-- <a href="#" class="m_top_50 d_block"><img src="/assets/images/336x280.jpg" alt=""></a> --> 
   </div>
   <div class="section">
     <h3 class="section_title">Social Media</h3>
