--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
       <h2 class="subtitle">{{ page.subtitle }}</h2>
       {% endif %}
       <div>
-        <img src="{{ site.baseurl }}/assets/images/post_img_medium.jpg" alt="">
+        <!-- <img src="{{ site.baseurl }}/assets/images/post_img_medium.jpg" alt=""> --> 
       </div>
       <p>
       {{ content }}</p>
