--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <div class="mobile_menu">
         <nav>
           <ul>
-            <li><a href="{{ site.url }}">Inicio</a></li> 
+            <li><a href="{{ site.url }}">Inicio</a></li>
             {% for page in site.pages %}
             {% if page.title and page.hide != true %}
             <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
@@ -26,16 +26,16 @@
 <script src="{{ site.baseurl }}/assets/js/jquery-2.1.0.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/jquery-ui.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/jquery.queryloader2.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/jflickrfeed.js"></script>
+<!-- <script src="{{ site.baseurl }}/assets/js/jflickrfeed.js"></script> -->
 <script src="{{ site.baseurl }}/assets/js/owl.carousel.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/retina.js"></script>
-<script src="{{ site.baseurl }}/assets/js/circles.min.js"></script>
-<script src="{{ site.baseurl }}/assets/plugins/twitter/jquery.tweet.min.js"></script>
+<!-- <script src="{{ site.baseurl }}/assets/js/circles.min.js"></script> -->
+<!-- <script src="{{ site.baseurl }}/assets/plugins/twitter/jquery.tweet.min.js"></script> -->
 <script src="{{ site.baseurl }}/assets/js/plugins.js"></script>
 <script src="{{ site.baseurl }}/assets/js/script.js"></script>
 
 <script>
-
+/*
 var colors = [['#fa985d', '#ffffff']], circles = [];
 var child = document.getElementById('circles-4');
 circles.push(Circles.create({
@@ -84,7 +84,7 @@ circles.push(Circles.create({
     text:       function(value){return value;},
     colors:    ['#fa985d', '#ffffff']
 }));
-
+*/
 </script>
 
 
