--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,16 +81,18 @@
             <div class="col-xs-12">
               <div class="clearfix">
                 <a href="{{ site.url }}" class="f_left logo"><img src="{{ site.baseurl }}/assets/images/logo.png" height-"100" alt=""></a>
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- Main banner -->
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-0673345823124253"
-                     data-ad-slot="5362926330"
-                     data-ad-format="auto"></ins>
-                <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+                  <div class="f_right">
+                      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                      <!-- Main banner -->
+                      <ins class="adsbygoogle"
+                           style="display:block"
+                           data-ad-client="ca-pub-0673345823124253"
+                           data-ad-slot="5362926330"
+                           data-ad-format="auto"></ins>
+                      <script>
+                      (adsbygoogle = window.adsbygoogle || []).push({});
+                      </script>
+                  </div>
               </div>
             </div>
           </div>
