--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <!-- <a href="#" class="m_top_50 d_block"><img src="/assets/images/336x280.jpg" alt=""></a> --> 
+    <!-- <a href="#" class="m_top_50 d_block"><img src="/assets/images/336x280.jpg" alt=""></a> -->
   </div>
   <div class="section">
     <h3 class="section_title">Social Media</h3>
@@ -69,7 +69,7 @@
     </ul>
   </div>
   <div class="section">
-    <h3 class="section_title">Meat Our Writers</h3>
+    <h3 class="section_title">Conheça nosso time</h3>
     <ul class="writers_list clearfix">
       {% for user in site.team %}
       <li>
