--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,13 @@
 <!--[if IE 9 ]><html class="ie9" lang="en"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 <head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-0673345823124253",
+          enable_page_level_ads: true
+     });
+</script>
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a870e511d81c2e3"></script>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,500,700">
@@ -81,18 +88,7 @@
             <div class="col-xs-12">
               <div class="clearfix">
                 <a href="{{ site.url }}" class="f_left logo"><img src="{{ site.baseurl }}/assets/images/logo.png" height-"100" alt=""></a>
-                  <div class="f_right">
-                      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                      <!-- Main banner -->
-                      <ins class="adsbygoogle"
-                           style="display:block"
-                           data-ad-client="ca-pub-0673345823124253"
-                           data-ad-slot="5362926330"
-                           data-ad-format="auto"></ins>
-                      <script>
-                      (adsbygoogle = window.adsbygoogle || []).push({});
-                      </script>
-                  </div>
+                  <a href="#" class="f_right"><img src="{{ site.baseurl }}/assets/images/header_ph.jpg" alt=""></a>
               </div>
             </div>
           </div>
