--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -75,7 +75,7 @@
       <li>
         <a href="#">
           <div>
-            <img src="{{ site.url }}/{{ user.avatar }}" alt="">
+            <img src="{{ user.avatar }}" alt="">
           </div>
           <div class="post_text">
             <h4>{{ user.name }}</h4>
