--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     <h3 class="section_title">Featured Video</h3>
     <div class="t_align_c">
       <div class="iframe_video_container">
-        <iframe src="//player.vimeo.com/video/64473966?title=0&amp;byline=0&amp;portrait=0&amp;color=dedede" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/l5zgi-vk7IE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
     </div>
   </div>
