--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,15 +24,38 @@ layout: default
 
               <h2 class="section_title section_title_medium_var2">{{ page.title }}</h2>
               {% if page.podcast %}
-               <iframe style="width:100%" height="120" src="{{ page.podcast }}"></iframe>
+              <iframe src="{{ page.podcast }}" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
               {% endif %}
               <div class="text_post_block">
                 {% if page.feature-img %}
                 <div class="scale_image_container">
-                    <a href="#"><img src="{{ site.baseurl }}/{{ page.feature-img }}" alt="" class="scale_image"></a>
+                    <a href="#"><img src="{{ page.feature-img }}" alt="" class="scale_image"></a>
                 </div>
                 {% endif %}
                 {{ content }}
+              </div>
+
+              <div class="section">
+                <h3 class="section_title">Nesse Episodio</h3>
+                <ul class="writers_list clearfix">
+                 {% for epi in page.talkers %}            
+                  {% for user in site.team %}
+                   {% if user.username ==  epi %}
+                  <li>
+                    <a href="#">
+                      <div>
+                        <img src="{{ user.avatar }}" alt="">
+                      </div>
+                      <div class="post_text">
+                        <h4>{{ user.name }}</h4>
+                        <div class="event_date">{{ user.title }}</div>
+                      </div>
+                    </a>
+                  </li>
+                      {% endif %}
+                   {% endfor %}
+                  {% endfor %}
+                </ul>
               </div>
 
 
